test/good/ex4.cb
def foo() -> int {
    loop {
        break loop {
            break 3;
        };
    }
}
