test/bad/ex5.cb
def foo() -> int {
    loop {
        break loop {
            break 3;
        };
        break true;
    }
}
